# FPRev

./: .gitignore  LICENSE  README.md  artifact_review_summary.md  pyproject.toml
experiments/: casestudy.py  requirements.txt  rq1.py  rq2.py  rq3.py
experiments/accumimpls/: __init__.py  jax.py  numpy.py  torch.py
outputs/: .gitignore  README.md  rq1.csv  rq2.csv  rq3.csv
visualization/: README.md  plot_rq1.py  plot_rq2.py  plot_rq3.py
